--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "npm run lint && npm run jest",
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
-    "start": "nodemon src/",
+    "start": "node src/",
     "jest": "jest --forceExit"
   },
   "standard": {
