--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "serve-favicon": "^2.5.0",
+    "sharp": "^0.31.2",
     "winston": "^3.8.1"
   },
   "devDependencies": {
